# cranberry

./: .gitignore  CMakeLists.txt  README.md  plot_gauss_errors.py
src/: abc.hpp  config.hpp  electrostatics.cpp  electrostatics.hpp  fdtd_types.hpp  field_updater.hpp  field_view_2d_result.hpp  gauss_law_result.hpp  grid.hpp  io.hpp  level.hpp  linalg.hpp  main.cpp  parallel_current_deposition.hpp  parallel_fdtd.hpp  parallel_jacobi.hpp  parallel_particle_pusher.hpp  particle_distribution.cpp  particle_distribution.hpp  particle_view_3d_result.hpp  particles.cpp  particles.hpp  physical_constants.hpp  physical_converter.cpp  physical_converter.hpp  print_result.cpp  print_result.hpp  progress_bar.hpp  runtime_field.hpp
